test/files/neg/xmltruncated6.scala
object Main {
  val stuff = <a>{ "no closing brace"
