test/files/neg/xmltruncated6.check
xmltruncated6.scala:2: error: in XML literal:  expected end of Scala block
  val stuff = <a>{ "no closing brace"
                                     ^
1 error
